# covscript-codec

./: .gitignore  CMakeLists.txt  README.md  codec.cpp  codec.csc  make.bat  make.sh  test1.json  test2.json
csbuild/: codec.json
hash-library/: crc32.cpp  md5.cpp  sha1.cpp  sha256.cpp
include/: crc32.h  endian.h  hash.h  md5.h  sha1.h  sha256.h
